Fix figcaption overflow

--- a/source/style.less
+++ b/source/style.less
@@ -158,6 +158,7 @@ section > figure > figcaption
     top: -57px;
     width: auto;
     height: 35px;
+    direction: rtl;
     overflow: hidden;
     text-align: right;
     position: relative;
